Native/Test/KL/missing-method.out
missing-method.kl:7:10: error: no such method Foo.baz(io Foo, String, Integer, Boolean)
